[gd_scene load_steps=3 format=3 uid="uid://b1c7xk8g2y4m0"]

[ext_resource type="Theme" uid="uid://b16urei1xqmh3" path="res://script_importer/import_theme.tres" id="1_gcplt"]
[ext_resource type="Script" path="res://script_importer/script_line_item.gd" id="2_omoax"]

[node name="ScriptLineItem" type="MarginContainer"]
custom_minimum_size = Vector2(600, 60)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gcplt")
script = ExtResource("2_omoax")

[node name="Node3D" type="Node3D" parent="."]

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme = ExtResource("1_gcplt")
theme_type_variation = &"LineItem"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_gcplt")

[node name="NumberMargin" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_gcplt")

[node name="ScriptNumber" type="Label" parent="HBoxContainer/NumberMargin"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_gcplt")
text = "01"

[node name="NameMargin" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_gcplt")
theme_override_constants/margin_left = 0

[node name="ScriptName" type="Label" parent="HBoxContainer/NameMargin"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_gcplt")
text = "sample_script_name"

[node name="ErrorMargin" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_gcplt")

[node name="Label" type="Label" parent="HBoxContainer/ErrorMargin"]
layout_mode = 2
theme = ExtResource("1_gcplt")
theme_type_variation = &"LabelDanger"
text = "4 Errors"

[node name="ViewMargin" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_gcplt")

[node name="ViewButton" type="Button" parent="HBoxContainer/ViewMargin"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_gcplt")
text = "view script"
